@@ -2,7 +2,8 @@ Source: synthv1
 Section: sound
 Priority: extra
 Maintainer: Rui Nuno Capela <rncbc@rncbc.org>
-Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.4),
+Build-Depends: debhelper (>= 5), qtbase5-dev (>= 5.1),
+  qtbase5-dev-tools (>= 5.1), qttools5-dev-tools (>= 5.1), qtchooser,
   libjack-dev, libasound2-dev, lv2-dev, liblo0-dev
 Standards-Version: 3.7.2
 
